--- a/components.json
+++ b/components.json
@@ -12,6 +12,7 @@
   },
   "aliases": {
     "components": "@/shared/components",
+    "ui": "@/shared/components/ui",
     "utils": "@/shared/lib/utils"
   },
   "iconLibrary": "lucide"
