fixed bugs with session and login , refactored auth modal and prisma schema, updated pk.json and tsconfig

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,9 +25,10 @@
   "include": [
     "next-env.d.ts", 
     "**/*.ts", 
+    "next.config.ts", 
     "**/*.tsx",  
-    "next.config.ts",
-    ".next/types/**/*.ts"
+    ".next/types/**/*.ts",
+    "@types/*.d.ts"
   ],
   "exclude": ["node_modules"]
 }
